--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,21 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+
+        unitTests {
+            includeAndroidResources = true
+        }
+        unitTests.all {
+            systemProperty 'robolectric.enabledSdks', '21'
+        }
+
+    }
+
+    sourceSets{main{java.srcDirs=['src/main/java']}}
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -33,9 +48,22 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
-    androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
+
+
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    testImplementation 'org.testng:testng:6.9.6'
+    testImplementation 'org.robolectric:robolectric:4.2.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
