--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -22,7 +22,7 @@ pipeline {
 
     stage('Unit test') { 
       steps {
-           sh './gradlew testDebugUnitTest '
+           sh './gradlew test '
       }
     }
     
