--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,6 +30,9 @@ pipeline {
     stage('Unit test and integration') { 
       steps {
             sh './gradlew test --rerun-tasks'
+            sh './gradlew dependencies'
+
+
       }
     }
     
