--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -29,6 +29,7 @@ pipeline {
 
     stage('Unit test and integration') { 
       steps {
+      @RunWith(RobolectricTestRunner.class)
             sh './gradlew test'
 
 
