--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ android {
     buildToolsVersion "29.0.3"
 
     sourceSets{
-
+androidTest {
+         setRoot('src/androidTest')
+      }
         main{
             java.srcDirs=['src/main/java']
         }
