--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "29.0.3"
 
     sourceSets{
-androidTest {
-         setRoot('src/androidTest')
+       test {
+         setRoot('src/test')
       }
         main{
             java.srcDirs=['src/main/java']
