--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'com.google.gms.google-services'
 
 
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 
 android {
     compileSdkVersion 29
