--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+  tasks.withType(Test).whenTaskAdded {
+        project.android.defaultConfig.applicationId 'com.*******.******'
+    }
+
+
     sourceSets{
 
         androidTest {
