--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'com.android.application'
 
+
+
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
