--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,10 @@ android {
 
 
     sourceSets{
-
-        androidTest {
-            setRoot('src/androidTest')
-        }
+    
+    androidTest {
+        setRoot('src/test')
+    }
         main{
             java.srcDirs=['src/main/java']
         }
