--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
+    implementation 'com.android.support:multidex:1.0.3'
 
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
