--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,8 @@
 apply plugin: 'com.android.application'
 
-
-
-tasks.withType(Test) {
-    testLogging {
-        exceptionFormat "full"
-        events "started", "skipped", "passed", "failed"
-        showStandardStreams true
-    }
-}
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
-
-    sourceSets{
-    
-    androidTest {
-        setRoot('src/test')
-    }
-        main{
-            java.srcDirs=['src/main/java']
-        }
-
-    }
 
     defaultConfig {
         applicationId "com.example.example"
@@ -49,6 +27,17 @@ android {
 
     }
 
+    sourceSets{
+
+
+        androidTest {
+            setRoot('src/androidTest')
+        }
+
+        main{
+            java.srcDirs=['src/main/java']
+        }
+    }
 
 
     buildTypes {
@@ -73,7 +62,6 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
-    implementation 'com.android.support:multidex:1.0.3'
 
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -86,6 +74,9 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     testImplementation 'org.testng:testng:6.9.6'
     testImplementation 'org.robolectric:robolectric:4.2.1'
+    androidTestImplementation 'org.robolectric:robolectric:4.2.1'
+    implementation 'com.android.support:multidex:1.0.3'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
