--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EditShelterEmployeeActivity"></activity>
         <activity android:name=".RequestCivilianActivity" />
-        <activity android:name=".CreateRequestCivilianActivity"
+        <activity
+            android:name=".CreateRequestCivilianActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".CivilianShelterInformationActivity" />
         <activity android:name=".DeleteEmergencyActivity" />
