--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditShelterEmployeeActivity"></activity>
+        <activity android:name=".ContantUsAdminActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".ContantUsInfoActivity"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".EditShelterEmployeeActivity"
+            android:windowSoftInputMode="adjustPan" />
+
         <activity android:name=".RequestCivilianActivity" />
         <activity
             android:name=".CreateRequestCivilianActivity"
@@ -40,7 +46,8 @@
         <activity android:name=".RequestsAdminActivity" />
         <activity android:name=".RequestsActivity" />
         <activity android:name=".RateActivity" />
-        <activity android:name=".ContactUsActivity" />
+        <activity android:name=".ContactUsActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".NumbersActivity"
             android:windowSoftInputMode="adjustPan" />
