--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContantUsAdminActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ContantUsInfoActivity"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".EditShelterEmployeeActivity"
-            android:windowSoftInputMode="adjustPan" />
-
+        <activity android:name=".EditShelterEmployeeActivity"></activity>
         <activity android:name=".RequestCivilianActivity" />
         <activity
             android:name=".CreateRequestCivilianActivity"
@@ -46,8 +40,7 @@
         <activity android:name=".RequestsAdminActivity" />
         <activity android:name=".RequestsActivity" />
         <activity android:name=".RateActivity" />
-        <activity android:name=".ContactUsActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".ContactUsActivity" />
         <activity
             android:name=".NumbersActivity"
             android:windowSoftInputMode="adjustPan" />
