--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ android {
 
 }
 
+checkstyle {
+	toolVersion "7.6.1"
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
