--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -40,14 +40,22 @@ pipeline {
     
     
     
-    stage('checkstyle') { 
-      steps {
-              sh './gradlew checkstyleMain'
-
-
-
-      }
-    }
+         stage('Frontend Static Code Analysis') {
+            steps {
+                script {
+                    try {
+                        sh './gradlew tslint --no-daemon'
+                    } finally { //Make checkstyle results available
+                        checkstyle canComputeNew: false, defaultEncoding: '', healthy: '', pattern: 'publicapi/frontend/tslint-result.xml', unHealthy: ''
+                    }
+                }
+            }
+        }
+        
+        
+        
+        
+        
     
     
   
