--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,14 @@ android {
         }
 
     }
+    
+    findbugs{
+    findbugsTest.enabled=false
+}
+pmd {
+    pmdTest.enabled=false
+}
+
 
     sourceSets {
 
