--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -37,6 +37,15 @@ pipeline {
       }
     }
     
+       stage('Static Code Analysis') {
+            steps {
+                script {
+                    sh './gradlew checkstyle'
+                    recordIssues enabledForFailure: true, aggregatingResults: true, tool: checkStyle(pattern: 'app/build/reports/checkstyle/checkstyle.xml')
+                }
+            }
+        }
+    
     
         
         
