--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,29 @@ pmd {
 }
 
 
+task checkstyle(type: Checkstyle) {
+    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+
+    source 'src/main/java'
+    include '**/*.java'
+    exclude '**/gen/**'
+
+    ignoreFailures true
+    showViolations true
+
+    classpath = files()
+}
+
+
+checkstyle {
+    toolVersion "8.17"
+}
+
+project.afterEvaluate {
+    preBuild.dependsOn 'checkstyle'
+}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
