--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,24 @@ task pmd(type: Pmd) {
 
 
 
+task findbugs(type: FindBugs) {
+    ignoreFailures = false
+    effort = "max"
+    reportLevel = "low"
+    classes = files("$project.buildDir/intermediates/javac")
+    excludeFilter = file("${rootDir}/findbugs.xml")
+    source = fileTree('src/main/java/')
+    classpath = files()
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        html.destination file("$project.buildDir/outputs/findbugs/findbugs-output.html")
+    }
+}
+
+
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
