--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -42,7 +42,7 @@ pipeline {
                 script {
 
 
-
+                    sh './gradlew check'
                     sh './gradlew checkstyle'
                     recordIssues enabledForFailure: true, aggregatingResults: true, tool: checkStyle(pattern: 'app/build/reports/checkstyle/checkstyle.xml')
                 }
