--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,40 +92,22 @@ project.afterEvaluate {
 
 
 task pmd(type: Pmd) {
-    ruleSetFiles = files("${rootDir}/pmd.xml")
+    configFile = files("${rootDir}/pmd.xml")
     ignoreFailures = false
-    ruleSets = []
     source 'src/main/java'
     include '**/*.java'
     exclude '**/gen/**'
-    reports {
-        xml.enabled = false
-        html.enabled = true
-        html.destination = file("$project.buildDir/outputs/pmd/pmd.html")
-    }
+  
 }
 
 
 
 
 
-task findbugs(type: FindBugs) {
-    ignoreFailures = false
-    effort = "max"
-    reportLevel = "low"
-    classes = files("$project.buildDir/intermediates/javac")
-    excludeFilter = file("${rootDir}/findbugs.xml")
-    source = fileTree('src/main/java/')
-    classpath = files()
-    reports {
-        xml.enabled = false
-        html.enabled = true
-        html.destination file("$project.buildDir/outputs/findbugs/findbugs-output.html")
-    }
-}
 
 
-check.dependsOn 'findbugs', 'pmd'
+
+check.dependsOn  'pmd'
 
 
 
