--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,12 +92,17 @@ project.afterEvaluate {
 
 
 task pmd(type: Pmd) {
-    configFile = files("${rootDir}/pmd.xml")
+    configFile = file("${rootDir}/checkstyle.xml")
     ignoreFailures = false
-    source 'src/main/java'
+    ruleSets = []
+   source 'src/main/java'
     include '**/*.java'
     exclude '**/gen/**'
-  
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        html.destination = file("$project.buildDir/outputs/pmd/pmd.html")
+    }
 }
 
 
