--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ project.afterEvaluate {
 
 
 task pmd(type: Pmd) {
-    configFile = file("${rootDir}/checkstyle.xml")
+    configFile = file("${rootDir}/pmd.xml")
     ignoreFailures = false
     ruleSets = []
    source 'src/main/java'
