--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,19 +90,26 @@ project.afterEvaluate {
 
 
 
-
 task pmd(type: Pmd) {
+    ignoreFailures = true
     ruleSetFiles = files("${rootDir}/pmd.xml")
-    ignoreFailures = false
     ruleSets = []
-   source 'src/main/java'
+
+    //source 'src'
+    source = fileTree('src/main/java')
     include '**/*.java'
     exclude '**/gen/**'
-    
-    
 
-    classpath = files()
-
+    reports {
+        //xml.enabled = false
+        html.enabled = true
+//        xml {
+//            destination "$project.buildDir/reports/pmd/pmd.xml"
+//        }
+        html {
+            destination "$project.buildDir/reports/pmd/pmd.html"
+        }
+    }
 }
 
 
