--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,26 +89,20 @@ project.afterEvaluate {
 
 
 
-
 task pmd(type: Pmd) {
-    ignoreFailures = true
     ruleSetFiles = files("${rootDir}/pmd.xml")
-    ruleSets = []
-
-    //source 'src'
-   
+    ignoreFailures = false
+  ruleSets = []
     source 'src/main/java'
     include '**/*.java'
     exclude '**/gen/**'
 
     reports {
+        xml.enabled = false
         html.enabled = true
-        html {
-            destination "$project.buildDir/reports/pmd/pmd.html"
-        }
+        html.destination = file("$project.buildDir/outputs/pmd/pmd.html")
     }
 }
-
 
 
 
