--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -41,7 +41,9 @@ pipeline {
             steps {
                 script {
 
-
+                  sh './gradlew checkstyle'
+                    recordIssues enabledForFailure: true, aggregatingResults: true, tool: checkStyle(pattern: 'app/build/reports/checkstyle/checkstyle.xml')
+                
                     sh './gradlew check'
   
                 }
