--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ project.afterEvaluate {
 
 task pmd(type: Pmd) {
     ruleSetFiles = files("${rootDir}/pmd.xml")
-    ignoreFailures = false
+    ignoreFailures = true
   ruleSets = []
     source 'src/main/java'
     include '**/*.java'
