--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,22 @@ project.afterEvaluate {
 
 
 
+task findbugs(type: FindBugs) {
+    ignoreFailures = true
+    effort = "max"
+    reportLevel = "low"
+    classes = files("$project.buildDir/intermediates/javac")
+    excludeFilter = file("${rootDir}/findbugs.xml")
+    source 'src/main/java'
+    classpath = files()
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        html.destination file("$project.buildDir/outputs/findbugs/findbugs-output.html")
+    }
+}
+
+
 
 task pmd(type: Pmd) {
     ruleSetFiles = files("${rootDir}/pmd.xml")
@@ -110,7 +126,7 @@ task pmd(type: Pmd) {
 
 
 
-check.dependsOn  'pmd'
+check.dependsOn  'pmd','findbugs'
 
 
 
