--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -79,7 +79,7 @@ post {
                     to: 'edenda2@ac.sce.ac.il'
             )
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '$DEFAULT_CONTENT', 
+                    body: '${TEST_COUNTS}, Failed: ${TEST_COUNTS,var="fail"}, Passed: {$TEST_COUNTS,var="pass"} ,$DEFAULT_CONTENT', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
