--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -79,7 +79,7 @@ post {
                     to: 'edenda2@ac.sce.ac.il'
             )
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '$project.buildDir/reports/tests/testDebugUnitTest/index.html', 
+                    body: '$DEFAULT_CONTENT', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
