--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -57,7 +57,9 @@ pipeline {
 
 
 post {
-
+        always {
+            junit 'build/reports/**/*.xml'
+        }
         failure{
                 emailext attachLog: true, body: "${currentBuild.result}: ${BUILD_URL}", compressLog: true, replyTo: 'sapirsa3@ac.sce.ac.il',
                 subject: "Build Notification: ${JOB_NAME}-Build# ${BUILD_NUMBER} ${currentBuild.result}", to: 'sapirsa3@ac.sce.ac.il'
