--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -57,9 +57,6 @@ pipeline {
 
 
 post {
-    always {
-        emailext body: 'A Test EMail', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Test'
-    }
         failure{
                 emailext attachLog: true, body: "${currentBuild.result}: ${BUILD_URL}", compressLog: true, replyTo: 'sapirsa3@ac.sce.ac.il',
                 subject: "Build Notification: ${JOB_NAME}-Build# ${BUILD_NUMBER} ${currentBuild.result}", to: 'sapirsa3@ac.sce.ac.il'
@@ -81,7 +78,7 @@ post {
                     to: 'edenda2@ac.sce.ac.il'
             )
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '$DEFAULT_CONTENT', 
+                    body: 'A Test EMail', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Test', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
