--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -57,6 +57,17 @@ pipeline {
 
 
 post {
+always{
+          publishHTML target: [
+              allowMissing: false,
+              alwaysLinkToLastBuild: false,
+              keepAll: true,
+              reportDir: 'coverage',
+              reportFiles: 'index.html',
+              reportName: 'RCov Report'
+            ]
+}
+
         failure{
                 emailext attachLog: true, body: "${currentBuild.result}: ${BUILD_URL}", compressLog: true, replyTo: 'sapirsa3@ac.sce.ac.il',
                 subject: "Build Notification: ${JOB_NAME}-Build# ${BUILD_NUMBER} ${currentBuild.result}", to: 'sapirsa3@ac.sce.ac.il'
@@ -78,7 +89,7 @@ post {
                     to: 'edenda2@ac.sce.ac.il'
             )
             emailext(subject: '$JOB_NAME - Build# $BUILD_NUMBER - $BUILD_STATUS', 
-                    body: '${FILE,path="$project.buildDir/reports/tests/testDebugUnitTest.index.html"}', 
+                    body: '${FILE,path="http://147.234.32.36/job/Team_6/job/app1/315/execution/node/3/ws/app/build/reports/tests/testDebugUnitTest/index.html"}', 
                     replyTo: 'sapirsa3@ac.sce.ac.il',
                     to: 'sapirsa3@ac.sce.ac.il')
 
