--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 31 22:28:55 IDT 2020
-sdk.dir=C\:\\Users\\yaelb\\AppData\\Local\\Android\\Sdk
+#Sat Jun 06 07:58:13 IDT 2020
+sdk.dir=C\:\\Users\\edend\\AppData\\Local\\Android\\Sdk
