--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -97,6 +97,10 @@ post {
                     
 
         }
+        always{
+              sh 'cp -r app/build/test-results $WORKSPACE/test-results'
+              junit(keepLongStdio: true, testResults: '*/test-results//.xml')
+        }
 
     }
  
